# wasteless

./: .env.template  .gitattributes  .gitignore  Brewfile  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  uninstall.sh  wasteless.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: nightly-integration.yml  tests.yml
config/: README.md  remediation.yaml  remediation.yaml.backup  remediation.yaml.template
docs/: ARCHITECTURE.md  AUTOMATION_GUIDE.md  AWS_SETUP.md  CLEANUP_GUIDE.md  CONTRIBUTING.md  CTO_QUICKSTART.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPPEMENT.md  FINOPS_AUDIT_TEMPLATE.md  MATURITY_TODO.md  PRODUCTION_VALIDATION.md  REMEDIATION.md
docs/adr/: 0001-sync-routes-and-connection-pool.md  0002-one-canonical-detector-per-resource.md  0003-auto-remediation-off-by-default.md  0004-two-python-environments.md  0005-scoped-mypy-and-coverage-gates.md  README.md
onboarding/: README.md
onboarding/cloudformation/: README.md  wasteless-onboarding.yaml
onboarding/policies/: README.md  readonly.json  remediation.json
onboarding/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: README.md  backfill_waste_snapshots.py  create_test_resources_continents.sh  finops.sh  github_users.sh  install_automation.sh  publish_onboarding_template.sh  run_cleanup.sh  run_collector.sh  run_detector.sh  store_aws_real_monthly_cost.py  teardown_test_resources.sh
sql/: README.md  ec2_metrics.sql  init.sql
sql/migrations/: 2026-07-18_amounts_to_usd.sql  README.md  active_waste_view.sql  add_missing_indexes.sql  ai_insight_column.sql  budget.sql  cloud_costs_unique.sql  collection_runs.sql  daily_briefings.sql  ec2_metrics_region.sql  gp2_waste_is_delta.sql  grace_period.sql  llm_usage.sql  remediation_tables.sql  terraform_pr.sql  waste_snapshots.sql
sql/oneshot/: 2026-07-18_amounts_to_usd.sql
sql/steampipe/: README.md  ami_backed_snapshots.sql  ami_orphan.sql  ebs_gp2.sql  ebs_orphan.sql  ec2_cpu_daily.sql  eip_orphan.sql  elb_unused.sql  nat_gateway_unused.sql  rds_idle.sql  rds_snapshot_orphan.sql  rds_stopped.sql  snapshot_orphan.sql  vpc_unused.sql
src/: README.md  aws_collector.py  constants.py  ec2_metrics_collector.py
src/collectors/: README.md  aws_cloudwatch.py  ec2_metrics_steampipe.py  steampipe.py
src/core/: README.md  __init__.py  aws_clients.py  config.py  database.py  finops_invariants.py  llm.py  observability.py  pricing.py  safeguards.py  snapshots.py
src/detectors/: README.md  ami_orphan.py  ebs_gp2_migration.py  ebs_orphan.py  ebs_orphan_steampipe.py  ec2_idle.py  ec2_stopped.py  eip_orphan.py  eip_orphan_steampipe.py  elb_unused.py  nat_gateway_unused.py  rds_idle.py  rds_pricing.py  rds_snapshot_orphan.py  rds_stopped.py  snapshot_orphan.py  steampipe_base.py  (+2 more)
terraform/: README.md  main.tf
tests/: README.md  __init__.py  test_end_to_end.py
ui/: .env.template  README.md  install.sh  jobs.py  main.py  requirements.txt  run_tests.py  schemas.py  start.sh  state.py
(+174 files in other folders)
