[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wasteless-backend"
version = "0.0.0"
requires-python = ">=3.11"

# Editable-installed into ui/venv so ui/utils/remediator.py can do
# `from remediators.ec2_remediator import EC2Remediator` instead of a
# sys.path.insert() hack pointing at the repo root. Only the packages
# that already have __init__.py are exposed: trackers/ and utils/ (the
# latter would collide with ui/utils/) stay out of scope on purpose.
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "detectors*", "remediators*", "reports*", "collectors*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["venv", "venv.nosync", ".venv", "ui/venv", "ui/venv.nosync"]

[tool.ruff.lint]
# S (flake8-bandit): security rules, same coverage as standalone bandit
# without adding a tool to the chain.
# B904: re-raises inside except must chain the cause (`raise ... from e`),
# otherwise the original traceback is lost.
extend-select = ["S", "B904"]
# E402: this codebase relies on sys.path.insert()/load_dotenv() before local
# imports in scripts and detectors (see docs/adr/0004-two-python-environments.md)
# -- not fixable without a packaging change, tracked separately.
# S603/S607: subprocess without shell=True and CLI names resolved via PATH
# (steampipe, terraform, git) are this codebase's *safe* invocation pattern;
# both rules flag the pattern itself, not a misuse.
ignore = ["E402", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
# Tests: asserts are the point (S101), and fixture credentials/SQL built
# from literals (S105/S106/S608) are not attack surface.
"tests/**" = ["S101", "S105", "S106", "S608"]
"ui/tests/**" = ["S101", "S105", "S106", "S608"]
